--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,12 @@ jobs:
             python-version: 3.9
           - os-name: macos-latest
             python-version: "3.10"
+
+          - os-name: windows-latest
+            python-version: 3.9
           - os-name: windows-latest
             python-version: "3.10"
+
     steps:
       - name: Checkout commit
         uses: actions/checkout@v2
