--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,15 +22,23 @@ jobs:
           3.9,
           "3.10"
         ]
+        app: [
+          "entrando",
+          "spritesomething"
+        ]
         exclude:
-          - os-name: macos-latest
+          - app: spritesomething
+            os-name: macos-latest
             python-version: 3.9
-          - os-name: macos-latest
+          - app: spritesomething
+            os-name: macos-latest
             python-version: "3.10"
 
-          - os-name: windows-latest
+          - app: spritesomething
+            os-name: windows-latest
             python-version: 3.9
-          - os-name: windows-latest
+          - app: spritesomething
+            os-name: windows-latest
             python-version: "3.10"
 
     steps:
@@ -45,4 +53,4 @@ jobs:
           python -m pip install wheel
       - name: Run Tester
         run: |
-          python ./resources/ci/common/py_tester.py
+          python ./resources/ci/common/py_tester.py ${{ matrix.app }}
