--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,18 @@ jobs:
         ]
         exclude:
           - app: spritesomething
-            os-name: [ macos-latest, windows-latest ]
-            python-version: [ 3.9, "3.10" ]
+            os-name: macos-latest
+            python-version: 3.9
+          - app: spritesomething
+            os-name: macos-latest
+            python-version: "3.10"
+
+          - app: spritesomething
+            os-name: windows-latest
+            python-version: 3.9
+          - app: spritesomething
+            os-name: windows-latest
+            python-version: "3.10"
 
     steps:
       - name: Checkout commit
