--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,23 +10,11 @@ jobs:
     runs-on: ${{ matrix.os-name }}
     strategy:
       matrix:
-        app: [
-          "entrando",
-          "spritesomething"
-        ]
+        app: ["entrando", "spritesomething"]
 
         # https://github.com/actions/virtual-environments
-        os-name: [
-          ubuntu-latest,
-          macos-latest,
-          windows-latest
-        ]
-        python-version: [
-          3.7,
-          3.8,
-          3.9,
-          "3.10"
-        ]
+        os-name: [ubuntu-latest, macos-latest, windows-latest]
+        python-version: [3.7, 3.8, 3.9, "3.10"]
         exclude:
           - app: spritesomething
             os-name: macos-latest
