See if still works with undoing exclusions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,20 +15,20 @@ jobs:
         # https://github.com/actions/virtual-environments
         os-name: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8, 3.9, "3.10"]
-        exclude:
-          - app: spritesomething
-            os-name: macos-latest
-            python-version: 3.9
-          - app: spritesomething
-            os-name: macos-latest
-            python-version: "3.10"
+        # exclude:
+        #   - app: spritesomething
+        #     os-name: macos-latest
+        #     python-version: 3.9
+        #   - app: spritesomething
+        #     os-name: macos-latest
+        #     python-version: "3.10"
 
-          - app: spritesomething
-            os-name: windows-latest
-            python-version: 3.9
-          - app: spritesomething
-            os-name: windows-latest
-            python-version: "3.10"
+        #   - app: spritesomething
+        #     os-name: windows-latest
+        #     python-version: 3.9
+        #   - app: spritesomething
+        #     os-name: windows-latest
+        #     python-version: "3.10"
 
     steps:
       - name: Checkout commit
