--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,12 +78,13 @@ jobs:
     steps:
       - name: Download documents
         uses: actions/download-artifact@v3
+        id: download
         with:
           name: ${{ matrix.app }}-${{ matrix.os-name }}-${{ matrix.python-version }}-manifests
           path: ./resources/user/manifests
-      - name: Download listing
-        run: |
-          ls ./resources/user/manifests
+      - name: Echo download path
+        run: echo ${{ steps.download.outputs.download-path }}
+      - name: List downloaded files
+        run: ls ${{ steps.download.outputs.download-path }}
       - name: Debug info
-        run: |
-          cat ./resources/user/manifests/pipline.txt
+        run: cat ${{ steps.download.outputs.download-path }}/pipline.txt
